--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "react": "^16.5.2",
+    "react-bulma-components": "^2.2.0",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
