--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "antd": "^3.10.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "node-sass-chokidar": "^1.3.4",
     "react": "^16.5.2",
     "react-bulma-components": "^2.2.0",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
     "reactstrap": "^6.5.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.82.5",
     "toastr": "^2.1.4"
   },
   "scripts": {
