--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.10.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "google-maps-react": "^2.0.2",
     "node-sass-chokidar": "^1.3.4",
     "react": "^16.5.2",
     "react-bulma-components": "^2.2.0",
